--- a/gesah-installer/webapp/src/main/webapp/local/css/local.css
+++ b/gesah-installer/webapp/src/main/webapp/local/css/local.css
@@ -2,4 +2,22 @@
     Override theme CSS styles by placing them in this file
 
     Note - all themes must include <../../..>/local/css/local.css as the last import.
+
+    position: unset;
+    padding: unset;
+    background-color: unset;
+    top: unset;
+    left: unset;
+
+    font-size: unset;
+    line-height: unset;
+    padding-bottom: unset;
+    background-image: none;
 */
+#mainImage {
+    position: unset;
+    top: unset;
+    left: unset;
+    background-color: #e4e4e4;
+    padding: 10px 20px 10px 20px;
+}
