--- a/gesah-installer/webapp/src/main/webapp/local/css/local.css
+++ b/gesah-installer/webapp/src/main/webapp/local/css/local.css
@@ -26,3 +26,17 @@
     font-size: 0.8em;
     background: #f4f4f4;
 }
+.listViewCard {
+    width: 100%;
+}
+.listViewCard ~ .listViewCard:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: -8px;
+    width: 100%;
+    border-top: 1px solid #dfe6e5;
+}
+.contextLink {
+    background: #dfe6e5;
+}
