--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/css/screen.css
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/css/screen.css
@@ -26,7 +26,7 @@ VIVO tenderfoot theme: screen styles
 @import url("navbar-breakpoint.css");
 @import url("page-admin.css");
 @import url("page-browse.css");
-@import url("page-home.css");
+@import url("page-home.css?nocache=1");
 @import url("page-imageupload.css");
 @import url("page-index.css");
 @import url("page-individual.css");
