--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/css/search-results.css
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/css/search-results.css
@@ -34,9 +34,25 @@
 }
 
 .searchTOC ul {
-display: none;
+	display: none;
 }
 
 .searchTOC:hover > ul {
-display: block;
+	display: block;
+}
+
+.tab-pane > label {
+	display: inline-block;
+}
+
+input[type=radio]:checked + label {
+  background-color: #af1414;
+  color: white;
+  border-radius: 10px;
+  padding: 2px 5px 2px 5px;
+}
+input[type=radio]:not(:checked) + label {
+  padding: 2px 5px 2px 5px;
+  border-radius: 10px;
+  background-color: #E3E3E3;
 }
