--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/css/search-results.css
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/css/search-results.css
@@ -51,8 +51,30 @@ input[type=radio]:checked + label {
   border-radius: 10px;
   padding: 2px 5px 2px 5px;
 }
+
+input[type=checkbox]:checked + label {
+  background-color: #af1414;
+  color: white;
+  border-radius: 10px;
+  padding: 2px 5px 2px 5px;
+}
+
 input[type=radio]:not(:checked) + label {
   padding: 2px 5px 2px 5px;
   border-radius: 10px;
   background-color: #E3E3E3;
+}
+
+input[type=checkbox]:not(:checked) + label {
+  padding: 2px 5px 2px 5px;
+  border-radius: 10px;
+  background-color: #E3E3E3;
+}
+
+#selected-filters > label{
+	display:inline-block;
+}
+
+.user-filter-search-input{
+	display:flex;
 }
