--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/css/search-results.css
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/css/search-results.css
@@ -78,3 +78,17 @@ input[type=checkbox]:not(:checked) + label {
 .user-filter-search-input{
 	display:flex;
 }
+
+.checked-search-input-label {
+  display: inline;
+  background-color: #af1414;
+  color: white;
+  border-radius: 10px;
+  padding: 2px 5px 2px 5px;
+  border: 0px;
+}
+
+.unckecked-selected-search-input-label {
+  background-color: #E3E3E3 !important;
+  color: unset !important;
+}
