--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/css/screen.css
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/css/screen.css
@@ -40,3 +40,5 @@ VIVO tenderfoot theme: screen styles
 @import url("tib-fonts.css");
 @import url("../../../local/css/local.css");
 @import url("search-results.css?nocache=1");
+@import url("nouislider.css?nocache=1");
+
