--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/css/search-results.css
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/css/search-results.css
@@ -99,3 +99,7 @@ input[type=checkbox]:not(:checked) + label {
 	border-right: 1px solid #ddd;
 	padding: 0.3em;
 }
+
+.range-filter {
+	padding: 15px;
+}
