--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/css/tenderfoot.css
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/css/tenderfoot.css
@@ -287,6 +287,7 @@ h1.vivo-logo {
     left: 0;
     background: url(../images/gesah.jpg) 0 0 no-repeat;
     background-size: 100% auto;
+    z-index: -1;
 }
 h1.vivo-logo a {
     display: block;
