improved home page view

--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/css/page-home.css
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/css/page-home.css
@@ -286,3 +286,14 @@ div.faculty-home {
 	width: 100%;
 }
 
+@media screen and (min-width: 640px) {
+	.category_facet {
+		height: 230px;
+	}
+}
+@media screen and (max-width: 640px) {
+	.category_facet {
+		height: 120px;
+	}
+}
+
