added image license to individual pages

--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/css/tenderfoot.css
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/css/tenderfoot.css
@@ -389,3 +389,7 @@ img.add-individual {
 .reportDatasource button.delete {
     float: right;
 }
+
+.license-statement {
+    text-align: center;
+}
