--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/css/page-home.css
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/css/page-home.css
@@ -36,7 +36,7 @@
     color: #AF1414;
 }
 
-.input-group {
+.home-page-input-group {
 	width: calc(100% - 127px);
 	padding-right: unset!important;
 }
