--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/css/edit.css
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/css/edit.css
@@ -61,7 +61,7 @@ input.form-button:visited {
     border: 0;
     margin: 0;
     /* background-color: #749a02; */
-    background-color: #AF1414;
+    background-color: #343a40;
     color: #fff;
     font-size: 14px;
     font-weight: normal;
