--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/css/page-individual.css
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/css/page-individual.css
@@ -68,7 +68,7 @@ article.property li h3 {
 
 #individual-intro h1 {
     font-size: 1.375em;
-    color: #AF1414;
+    color: #2B3C46;
 }
 
 #individual-intro #iconControlsRightSide {
