--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/css/page-browse.css
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/css/page-browse.css
@@ -11,7 +11,7 @@ ul#vgraph-classes li {
 }
 ul#browse-classes a:hover,
 ul#browse-classes a.selected {
-    background: url(../images/arrow.gif) 4px 5px no-repeat;
+    background: url(../images/arrow-right.svg) 4px 6px no-repeat;
     color: #AF1414;
 }
 ul#browse-classes .count-classes {
@@ -26,7 +26,7 @@ ul#alpha-browse-individuals {
 }
 ul#alpha-browse-individuals a:hover,
 ul#alpha-browse-individuals a.selected {
-    background: url(../images/arrowSmall.gif) -3px 7px no-repeat;
+    background: url(../images/arrow-right.svg) -3px 7px no-repeat;
     color: #AF1414;
 }
 ul#alpha-browse-individuals .count-classes,
