--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/css/tib-overrides.css
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/css/tib-overrides.css
@@ -37,6 +37,15 @@ table#table-listing th {
     background-color: #E3E3E3;
 }
 
+.tab-content, .col-md-4 {
+    padding-right: 0px!important;
+    padding-left: 0px!important;
+}
+
+.col-md-8 {
+    padding-right: 0px!important;
+    padding-left: 20px!important;
+}
 .form-control:focus {
 
     border-color: #af1414;
@@ -45,6 +54,11 @@ table#table-listing th {
     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(175, 20, 20, .6);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(175, 20, 20, .6);
 }
+
+.navbar-brand, .navbar-nav > li > a {
+text-shadow: unset!important;
+}
+
 
 .collaboratorship-link h3 a {
     color: #4b4b4b;
