--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/css/page-home.css
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/css/page-home.css
@@ -46,11 +46,12 @@
 	height: 36px;
 	display: inline;
 	margin-top: 10px;
-	margin-left: 5px;
+	margin-left: 10px;
 }
 
 .search-icon-question{
 	padding: 5px;	
+	margin-left: 5px;	
 }
 
 .search-icon-settings{
@@ -64,6 +65,10 @@
 
 #search-line-container > a {
 	display: flex;
+}
+
+#search-homepage {
+        padding-left: 15px!important;
 }
 
 .form-group {
@@ -312,20 +317,20 @@ div.faculty-home {
 	flex-basis: 100%;
 	flex-direction: row;
 	flex-wrap: wrap;
-	padding-right: 60px;
-	padding-left: 60px;
+	//padding-right: 60px;
+	//padding-left: 60px;
 }
 
 #exploreTheCollection {
 	color: #2B3C46;
-	padding-left: 80px;
+	//padding-left: 80px;
 	font-size: 2.0em;
 	margin-top: 30px;
 	margin-bottom: 20px;
 }
 #search-collection-heading {
 	color: #2B3C46;
-	padding-left: 80px;
+	//padding-left: 80px;
         font-size: 2.0em;
         margin-top: 30px;
         margin-bottom: 20px;
@@ -344,6 +349,8 @@ div.faculty-home {
 	position: relative;
 	flex-grow: 1;
 	overflow: hidden;
+	padding-right: 15px;
+        padding-top: 15px;
 }
 
 .category_facet > a > img {
