--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/css/page-home.css
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/css/page-home.css
@@ -10,14 +10,16 @@
 
 .more-objects-image-container {
 	display: flex;
-    justify-content: space-evenly;
+    justify-content: left;
     padding-top:20px!important;
     padding-bottom:0px!important;
+    padding-left:0px!important;
     margin-bottom:0px!important;
 }
 
 .more-objects-image-container > div {
 	position: relative;
+	margin-right:15px;
 }
 
 .jumbotron h1 {
