--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/css/tenderfoot.css
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/css/tenderfoot.css
@@ -137,8 +137,6 @@ body {
 /* HEADER ------>  */
 #branding {
     border-bottom: 0px !important;
-    position: relative;
-    height: 70px;
     margin: 0 auto;
 }
 #branding .row {
@@ -285,14 +283,12 @@ a.powered-by-vivo:hover {
 }
 /* BRANDING ------>  */
 h1.vivo-logo {
-    position: absolute;
     width: 100%;
     height: 50px;
     top: 15px;
     left: 0;
     background-size: auto 100% !important;
     z-index: -1;
-    max-width: 25%;
 }
 h1.vivo-logo a {
     display: block;
@@ -397,4 +393,21 @@ img.add-individual {
 
 .license-statement {
     text-align: center;
+}
+
+@media screen and (min-width: 640px) {
+	#branding {
+	    height: 70px;
+	}
+	h1.vivo-logo {
+	    position: absolute;
+	}
+}
+@media screen and (max-width: 640px) {
+	#branding {
+	    height: 100px;
+	}
+	h1.vivo-logo {
+	    position: relative;
+	}
 }
