--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/css/tenderfoot-tib.css
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/css/tenderfoot-tib.css
@@ -172,6 +172,13 @@ h3 {
   text-align: justify;
   line-height: 1.6rem;
 }
+
+#wrapper-content > p > a {
+  font-size: 1.2rem;
+  text-align: justify;
+  line-height: 1.6rem;
+}
+
 #wrapper-content > h2 {
   font-size: 1.6rem;
   margin-bottom: 0.8rem;
