fixed home page image shadowing and links underline

--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/css/tenderfoot.css
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/css/tenderfoot.css
@@ -225,6 +225,11 @@ footer {
 
 .footer-heading, .footer-heading a, .footer-heading p {
     font-size: 1.2rem;
+    text-transform: uppercase;
+}
+
+footer a:hover {
+	color: #8499A3;
 }
 
 footer .row {
