--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/css/page-home.css
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/css/page-home.css
@@ -345,6 +345,7 @@ div.faculty-home {
 
 .home-page-intro > p > a {
   font-size: 1.2rem;
+  text-decoration: underline;
 }
 
 #searchFacets {
@@ -392,6 +393,10 @@ a.facet_link:hover > div.category_facet_description {
 	display: block;
 }
 
+a.facet_link:hover > img {
+	opacity: 0.6;
+}
+
 a.facet_link:hover > div.category_facet_label {
 	display: none;
 }
@@ -399,6 +404,7 @@ a.facet_link:hover > div.category_facet_label {
 .category_facet{
 	position: relative;
 	flex-grow: 1;
+	background: black;
 	overflow: hidden;
 }
 
