search form styles

--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/css/tenderfoot.css
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/css/tenderfoot.css
@@ -66,6 +66,10 @@ p.navbar-text {
     float: right;
 }
 
+span.icon-search {
+  text-shadow: none!important;
+}
+
 button.navbar-toggle {
     z-index: 999;
 }
