--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/css/search-results.css
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/css/search-results.css
@@ -153,9 +153,36 @@ input[type=checkbox]:not(:checked) + label {
   margin-top: 10px !important;
 }
 
-
-
 .searchpages span {
   background: #ddd;
   border-radius: 3px;
+}
+
+.filter-tab {
+  border-right: 0px !important;
+  border-top: 0px !important;
+  border-left: 0px !important;
+}
+
+.filter-tab.active > a {
+  background: linear-gradient(white 10%, #F1F1F1);
+}
+
+.filter-tab > a {
+  border-right: 0px !important;
+  border-top: 0px !important;
+  border-left: 0px !important;
+  margin-right: 0px !important;
+}
+
+.filter-tab.hover {
+  background: linear-gradient(white 10%, #F1F1F1);
+}
+
+.filter-tab > a:hover {
+  background: linear-gradient(white 10%, #ddd);
+}
+
+.tab-content > div {
+  border: 0px;
 }
