proxy search input

--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/css/search-results.css
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/css/search-results.css
@@ -186,3 +186,7 @@ input[type=checkbox]:not(:checked) + label {
 .tab-content > div {
   border: 0px;
 }
+
+.extended-search-input-group {
+  display: none;
+}
