--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/css/tenderfoot.css
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/css/tenderfoot.css
@@ -70,6 +70,10 @@ span.icon-search {
   text-shadow: none!important;
 }
 
+#search-field > input {
+  outline: none !important;
+}
+
 button.navbar-toggle {
     z-index: 999;
 }
