--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/css/search-results.css
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/css/search-results.css
@@ -166,6 +166,7 @@ input[type=checkbox]:not(:checked) + label {
 
 .filter-tab.active > a {
   background: linear-gradient(white 10%, #F1F1F1);
+  border-bottom-color: #ddd !important;
 }
 
 .filter-tab > a {
