--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/css/tib-overrides.css
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/css/tib-overrides.css
@@ -153,3 +153,8 @@ a.temporalGraphLinks:hover {
 span#searchHelp {
     padding-right: 0px;
 }
+
+.searchResultsHeader {
+	width: unset!important;
+}
+
