--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/css/tib-overrides.css
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/css/tib-overrides.css
@@ -158,3 +158,8 @@ span#searchHelp {
 	width: unset!important;
 }
 
+.co-short-description {
+	padding: 10px 20px 10px 20px;
+	background-color: #f1f1f1;
+	margin-bottom: 20px;
+}
