--- a/gesah-installer/webapp/src/main/webapp/local/css/local.css
+++ b/gesah-installer/webapp/src/main/webapp/local/css/local.css
@@ -21,11 +21,19 @@
     background-color: #e4e4e4;
     padding: 10px 20px 10px 20px;
 }
+
 .titleTypeListItem {
     padding: 0 0.4em;
     font-size: 0.8em;
     background: #f4f4f4;
 }
+
+.titleTypeListItemInv {
+    padding: 0 0.4em;
+    font-size: 0.8em;
+    background: #fff;
+}
+
 .listViewCard {
     width: 100%;
 }
