first page index state text

--- a/gesah-installer/webapp/src/main/webapp/themes/gesah/css/page-home.css
+++ b/gesah-installer/webapp/src/main/webapp/themes/gesah/css/page-home.css
@@ -371,6 +371,10 @@ div.faculty-home {
         margin-bottom: 20px;
 }
 
+.home-page-index-status {
+	margin-top: 10px;
+}
+
 .category_facet_label {
 	position: absolute;
 	top: 18px;
